--- a/GD.FinishingSystem.WEB/Views/Rulo/CreateOrUpdate.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/CreateOrUpdate.cshtml
@@ -6,7 +6,7 @@
 
 <div class="alert alert-info">
     <h1 class="mt-4">
-        @if (Model.RuloID == 0)
+        @if (Model.RuloID == 0 || Model.RuloID == 1)
         {
             @Html.Raw("Create")
             ViewData["Title"] = "Create Rulo Information";
@@ -176,7 +176,7 @@
                 }
 
                 <div class="form-group">
-                    @if (Model.RuloID == 0)
+                    @if (Model.RuloID == 0 || Model.RuloID == -1)
                     {
                         @* <button type="submit" id="btnSave" onclick="disableButton()" class="btn btn-primary"><i class="lni lni-circle-plus"></i> Create</button> *@
                         <a id="btnSave" onclick="ValidateCreateFromRuloMigration()" class="btn btn-primary"><i class="lni lni-circle-plus"></i> Create</a>
