A change was made to the Finished Raw Fabric Entrance Detailed. An Role was also added to transfer the rolls from Fabric to Finish through the Web system, so that only in emergencies or when the readers are not working the button is activated. The information in the Rulo window was also modified so that information other than what is necessary cannot be modified from Finishing. Date: 2024-02-26 v3.0.14

--- a/GD.FinishingSystem.WEB/Views/Account/RoleManager.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Account/RoleManager.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<string>
 @{
-    string[] FormList = new string[] { "Rulo", "RuloProcess", "DefinitionProcess", "TestResult", "TestCategory", "Machine", "Sample", "Piece", "Period", "Authorize", "RuloMigration", "SystemPrinter", "Users", "Report", "RawReport", "RuloTest", "FinishMetersManually", "PerformanceTestReport", "Reprocess" }; /*PDFReport*/
+    string[] FormList = new string[] { "Rulo", "RuloProcess", "DefinitionProcess", "TestResult", "TestCategory", "Machine", "Sample", "Piece", "Period", "Authorize", "RuloMigration", "SystemPrinter", "Users", "Report", "RawReport", "RuloTest", "FinishMetersManually", "PerformanceTestReport", "Reprocess", "TransferToFinishing" }; /*PDFReport*/
 
     ViewData["Title"] = "Authorize  ";
     Layout = "~/Views/Shared/_Layout.cshtml";
