--- a/GD.FinishingSystem.WEB/Views/Rulo/CreateOrUpdate.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/CreateOrUpdate.cshtml
@@ -31,48 +31,90 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="row">
 
-            @if (User.IsInRole("RuloTest", AuthType.Add) || User.IsInRole("RuloTest", AuthType.Full))
-            {
-                <div class="col-lg-3 col-md-4 col-sm-12">
-                    <div class="form-group">
-                        <label asp-for="IsTestStyle" class="control-label"></label>
+            @*             @if (User.IsInRole("RuloTest", AuthType.Add) || User.IsInRole("RuloTest", AuthType.Full))
+            { *@
+            <div class="col-lg-3 col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label asp-for="IsTestStyle" class="control-label"></label>
+                    @if ((bool)ViewBag.FromRuloMigration)
+                    {
                         <input type="checkbox" asp-for="IsTestStyle" class="form-control input-xs" onclick="setStyleTest();" />
-                    </div>
+                    }
+                    else
+                    {
+                        <input type="checkbox" asp-for="IsTestStyle" class="form-control input-xs" onclick="setStyleTest();" disabled />
+                    }
                 </div>
-            }
+            </div>
+            @* } *@
 
             <div class="col-lg-3 col-md-4 col-sm-12">
                 <div class="form-group">
                     <label asp-for="Lote" class="control-label"></label>
-                    <input asp-for="Lote" class="form-control" onfocusout="getStyleData()" />
+                    @if ((bool)ViewBag.FromRuloMigration)
+                    {
+                        <input asp-for="Lote" class="form-control" onfocusout="getStyleData()" />
+                    }
+                    else
+                    {
+                        <input asp-for="Lote" class="form-control" onfocusout="getStyleData()" disabled />
+                    }
                     <span asp-validation-for="Lote" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-12">
                 <div class="form-group">
                     <label asp-for="Beam" class="control-label"></label>
-                    <input asp-for="Beam" class="form-control" /> @* type="number" *@
+                    @if ((bool)ViewBag.FromRuloMigration)
+                    {
+                        <input asp-for="Beam" class="form-control" /> @* type="number" *@
+                    }
+                    else
+                    {
+                        <input asp-for="Beam" class="form-control" disabled />
+                    }
                     <span asp-validation-for="Beam" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-12">
                 <div class="form-group">
                     <label asp-for="BeamStop" class="control-label"></label>
-                    <input asp-for="BeamStop" class="form-control" />
+                    @if ((bool)ViewBag.FromRuloMigration)
+                    {
+                        <input asp-for="BeamStop" class="form-control" />
+                    }
+                    else
+                    {
+                        <input asp-for="BeamStop" class="form-control" disabled />
+                    }
                     <span asp-validation-for="BeamStop" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-12">
                 <div class="form-group">
                     <label asp-for="Loom" class="control-label"></label>
-                    <input asp-for="Loom" class="form-control" /> @* type="number" *@
+                    @if ((bool)ViewBag.FromRuloMigration)
+                    {
+                        <input asp-for="Loom" class="form-control" /> @* type="number" *@
+                    }
+                    else
+                    {
+                        <input asp-for="Loom" class="form-control" disabled />
+                    }
                     <span asp-validation-for="Loom" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-12">
                 <div class="form-group">
                     <label asp-for="IsToyota" class="control-label"></label>
-                    <input type="checkbox" asp-for="IsToyota" class="form-control input-xs" />
+                    @if ((bool)ViewBag.FromRuloMigration)
+                    {
+                        <input type="checkbox" asp-for="IsToyota" class="form-control input-xs" />
+                    }
+                    else
+                    {
+                        <input type="checkbox" asp-for="IsToyota" class="form-control input-xs" disabled />
+                    }
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-12">
@@ -96,7 +138,7 @@
                     <span asp-validation-for="Width" class="text-danger"></span>
                 </div>
             </div>
-            @if ((bool)ViewBag.OriginEnabled == false) //If origin is enabled, it is a reprocess, therefore people can't enter value in Weaving value and this will be 0.
+            @if ((bool)ViewBag.FromRuloMigration == false) //If origin is enabled, it is a reprocess, therefore people can't enter value in Weaving value and this will be 0.
             {
                 <div class="col-lg-3 col-md-4 col-sm-12">
                     <div class="form-group">
@@ -123,7 +165,7 @@
             <div class="col-lg-3 col-md-4 col-sm-12">
                 <div class="form-group">
                     <label asp-for="MainOriginID" class="control-label"></label>
-                    @if ((bool)ViewBag.OriginEnabled) //If origin is enabled, it is a reprocess and people can modify main origin and origin, otherwise people can't modify
+                    @if ((bool)ViewBag.FromRuloMigration) //If origin is enabled, it is a reprocess and people can modify main origin and origin, otherwise people can't modify
                     {
                         <select asp-for="MainOriginID" asp-items="@ViewBag.MainOriginList" class="form-control"></select>
                     }
@@ -137,7 +179,7 @@
             <div class="col-lg-3 col-md-4 col-sm-12">
                 <div class="form-group">
                     <label asp-for="OriginID" class="control-label"></label>
-                    @if ((bool)ViewBag.OriginEnabled)
+                    @if ((bool)ViewBag.FromRuloMigration)
                     {
                         <select asp-for="OriginID" asp-items="@ViewBag.OriginList" class="form-control"></select>
                     }
@@ -272,9 +314,24 @@
         document.getElementById("OriginID").disabled = valStatus;
         document.getElementById("Style").disabled = valStatus;
         document.getElementById("StyleName").disabled = valStatus;
-        if (document.getElementById("WeavingLength")) {
+
+        if (document.getElementById("IsTestStyle"))
+            document.getElementById('IsTestStyle').disabled = valStatus; //This was added for avoid that finishing staff change when is test and comes from rulo migration
+        if (document.getElementById("Lote"))
+            document.getElementById('Lote').disabled = valStatus
+        if (document.getElementById("Beam"))
+            document.getElementById('Beam').disabled = valStatus
+        if (document.getElementById("BeamStop"))
+            document.getElementById('BeamStop').disabled = valStatus
+        if (document.getElementById("Loom"))
+            document.getElementById('Loom').disabled = valStatus
+        if (document.getElementById("Loom"))
+            document.getElementById('Loom').disabled = valStatus
+        if (document.getElementById("IsToyota"))
+            document.getElementById('IsToyota').disabled = valStatus
+
+        if (document.getElementById("WeavingLength"))
             document.getElementById("WeavingLength").disabled = valStatus;
-        }
 
     }
 
