A detail was corrected in the movement of the column headers due to the blocking of the Transfer Button from Fabric to Finishing. Date: 2024-03-11 v3.0.16

--- a/GD.FinishingSystem.WEB/Views/Migration/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Migration/Index.cshtml
@@ -196,7 +196,7 @@
             {
                 <th></th>
             }
-            @if (areaID == (int)AreaType.Acabado)
+            @if (areaID == (int)AreaType.Acabado && (User.IsInRole("TransferToFinishing", AuthType.Full) || User.IsInRole("TransferToFinishing", AuthType.Update)))
             {
                 <th></th>
             }
